# intelliesg

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: master_intelliesg.yml  master_itelliesg.yml
common/: forms.py  mixins.py  models.py
companies/: forms.py  models.py  urls.py
companies/migrations/: 0001_initial.py
companies/views/: __init__.py  companies_views.py
envdata/: admin.py  apps.py  constants.py  forms.py  mixins.py  models.py  urls.py  utils.py  views.py
envdata/migrations/: 0001_initial.py  0002_alter_company_name.py  0002_alter_energy_emission_type_alter_fuel_emission_type_and_more.py  0002_company_logo.py  0002_company_owner.py  0002_energy_energy_quantity_alter_fuel_vehicle_type.py  0002_remove_fuel_fuel_quantity.py  0002_remove_scopetwoemission_total_co2_scope_two.py  0002_rename_activity_taxonomyturnover_turnover_activity.py  0002_target.py  0002_taxonomysector_taxonomyopex_taxonomycapex_and_more.py  0003_alter_company_logo.py  0003_alter_energy_emission_type_alter_fuel_emission_type_and_more.py  0003_alter_target_intermediate_year.py  (+15 more)
esgmanager/: admin.py  apps.py  constants.py  forms.py  models.py  urls.py
govdata/: apps.py
intelliesg/: asgi.py  production.py  settings.py  urls.py  wsgi.py
socialdata/: admin.py  apps.py  forms.py  models.py  urls.py
templates/: about.html  base.html  emissions_charts.html  nav_forms.html  navbar.html  paginator.html  signin.html  starter.html
users/: forms.py  models.py  signals.py  urls.py  views.py
(+186 files in other folders)
